src/objects/CH_Workgroup_Rule__c/CH_Workgroup_Rule__c.object-meta.xml
<CustomObject>
    <label>Workgroup Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workgroup Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>