src/objects/CH_Workgroup_Rule__c/fields/CH_Contract__c.field-meta.xml
<CustomField>
    <fullName>CH_Contract__c</fullName>
    <description>The contract number that the rule applies to</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The contract number that the rule applies to</inlineHelpText>
    <label>DELETE Service Contract</label>
    <length>10</length>
    <type>Text</type>
</CustomField>