src/objects/CH_Workgroup_Rule__c/fields/CH_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>CH_Product_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>When multiple products need to be assigned to the rule, a product group needs to be created</description>
    <inlineHelpText>When multiple products need to be assigned to the rule, a product group needs to be created</inlineHelpText>
    <label>Product Group</label>
    <referenceTo>CH_ProductGrouping__c</referenceTo>
    <relationshipLabel>Workgroup Rules</relationshipLabel>
    <relationshipName>CH_Workgroup_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>