src/objects/CH_Workgroup_Rule__c/fields/CH_Product_Module__c.field-meta.xml
<CustomField>
    <fullName>CH_Product_Module__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Module</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.CH_Valid__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.PMD_Portfolio_Classification__c</field>
            <operation>equals</operation>
            <value>Product Modules</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Workgroup Rules (Product Module)</relationshipLabel>
    <relationshipName>Workgroup_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>