src/objects/CH_Workgroup_Rule__c/fields/CH_Region1__c.field-meta.xml
<CustomField>
    <fullName>CH_Region1__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CH_Region</valueSetName>
    </valueSet>
</CustomField>