src/objects/CH_Workgroup_Rule__c/recordTypes/CH_CA_WorkgroupRule.recordType-meta.xml
<RecordType>
    <fullName>CH_CA_WorkgroupRule</fullName>
    <active>true</active>
    <label>CH_CA_WorkgroupRule</label>
</RecordType>