src/objects/CH_Workgroup_Rule__c/recordTypes/CH_KB_WorkgroupRule.recordType-meta.xml
<RecordType>
    <fullName>CH_KB_WorkgroupRule</fullName>
    <active>true</active>
    <label>CH_KB_WorkgroupRule</label>
</RecordType>