src/objects/CH_Workgroup_Rule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CH_OrderNumber__c</columns>
    <columns>NAME</columns>
    <columns>CH_Workgroup__c</columns>
    <columns>CH_Level_Of_Support__c</columns>
    <columns>CH_Customer_Group__c</columns>
    <columns>CH_Region1__c</columns>
    <columns>CH_Country1__c</columns>
    <columns>CH_Account__c</columns>
    <columns>CH_Product_Group__c</columns>
    <columns>CH_Product__c</columns>
    <columns>CH_Severity__c</columns>
    <columns>CH_Contract__c</columns>
    <columns>CH_BusinessHours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>