src/objects/CH_Workgroup_Rule__c/listViews/CH_WG_Rules_for_DV_T.listView-meta.xml
<ListView>
    <fullName>CH_WG_Rules_for_DV_T</fullName>
    <columns>CH_OrderNumber__c</columns>
    <columns>NAME</columns>
    <columns>CH_Workgroup__c</columns>
    <columns>CH_LevelOfSupport__c</columns>
    <columns>CH_Customer_Group__c</columns>
    <columns>CH_Account__c</columns>
    <columns>CH_Product_Group__c</columns>
    <columns>CH_Product__c</columns>
    <columns>CH_Region1__c</columns>
    <columns>CH_Country1__c</columns>
    <columns>CH_Severity__c</columns>
    <columns>CH_Outage__c</columns>
    <columns>CH_ServiceContract__c</columns>
    <columns>CH_BusinessHours__c</columns>
    <columns>CH_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CH_Workgroup_Rule__c.CH_CA_WorkgroupRule</value>
    </filters>
    <label>CH WG Rules for DV&amp;T</label>
    <sharedTo>
        <group>CH_DVT_Admin</group>
    </sharedTo>
</ListView>